--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.1",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.16"
   },
