chore: fix CI script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ deploy:
   image: node:8-alpine
   stage: deploy
   script:
+    - npm i
     - npx firebase deploy --only hosting --token $FIREBASE_TOKEN
   cache:
     policy: pull
