--- a/package.json
+++ b/package.json
@@ -12,47 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.4",
-    "@angular/common": "^4.3.4",
-    "@angular/compiler": "^4.3.4",
-    "@angular/core": "^4.3.4",
-    "@angular/forms": "^4.3.4",
-    "@angular/http": "^4.3.4",
-    "@angular/platform-browser": "^4.3.4",
-    "@angular/platform-browser-dynamic": "^4.3.4",
-    "@angular/router": "^4.3.4",
-    "angular2-materialize": "^15.1.7",
-    "angularfire2": "^4.0.0-rc.1",
-    "core-js": "^2.5.0",
-    "firebase": "^4.2.0",
+    "@angular/animations": "^6.1.8",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/fire": "^5.0.2",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
+    "core-js": "^2.5.7",
+    "firebase": "^5.5.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "materialize-css": "^0.100.1",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.13",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.16"
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.0",
-    "@angular/compiler-cli": "^4.3.4",
-    "@angular/language-service": "^4.3.4",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.20",
-    "codelyzer": "^3.1.2",
-    "firebase-tools": "^3.9.2",
-    "jasmine-core": "^2.7.0",
-    "jasmine-spec-reporter": "^4.2.0",
-    "karma": "~1.7.0",
+    "@angular-devkit/build-angular": "~0.8.3",
+    "@angular/cli": "^6.2.3",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/language-service": "^6.1.8",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^10.11.0",
+    "codelyzer": "^4.4.4",
+    "jasmine-core": "^3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.6.0",
-    "typescript": "^2.4.2"
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
+    "protractor": "~5.4.1",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "~2.9.2"
   }
 }
