--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/platform-browser": "^6.1.8",
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@angular/router": "^6.1.8",
+    "bulma": "^0.7.1",
     "core-js": "^2.5.7",
+    "dayjs": "^1.7.7",
     "firebase": "^5.5.1",
     "font-awesome": "^4.7.0",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
+    "luxon": "^1.3.3",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
@@ -37,6 +38,7 @@
     "@angular/language-service": "^6.1.8",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/luxon": "^1.2.2",
     "@types/node": "^10.11.0",
     "codelyzer": "^4.4.4",
     "jasmine-core": "^3.2.1",
