feat: add generate docx

--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
     "core-js": "2.6.9",
+    "docxtemplater": "^3.11.3",
+    "file-saver": "^2.0.2",
     "firebase": "6.1.1",
     "font-awesome": "4.7.0",
+    "jszip": "^2.6.1",
+    "jszip-utils": "0.0.2",
     "materialize-css": "^1.0.0",
     "moment": "2.24.0",
     "moment-timezone": "0.5.25",
