--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
               "node_modules/materialize-css/dist/css/materialize.css"
             ],
             "scripts": [
-              "node_modules/materialize-css/dist/js/materialize.js"
+              "node_modules/materialize-css/dist/js/materialize.js",
+              "node_modules/jszip/dist/jszip.js",
+              "node_modules/jszip-utils/dist/jszip-utils.js",
+              "node_modules/docxtemplater/js/docxtemplater.js"
             ]
           },
           "configurations": {
