feat: reinstall Materialize

--- a/angular.json
+++ b/angular.json
@@ -20,9 +20,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/materialize-css/dist/css/materialize.css"
             ],
             "scripts": [
+              "node_modules/materialize-css/dist/js/materialize.js"
             ]
           },
           "configurations": {
