--- a/functions/package.json
+++ b/functions/package.json
@@ -1,15 +1,28 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "dependencies": {
-    "firebase-admin": "8.2.0",
-    "firebase-functions": "3.0.2"
-  },
-  "private": true,
-  "devDependencies": {
-    "typescript": "3.2.4"
-  },
   "scripts": {
-    "build": "tsc index.ts"
-  }
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
+  },
+  "engines": {
+    "node": "10"
+  },
+  "main": "lib/index.js",
+  "dependencies": {
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^3.0.0",
+    "nodemailer": "^6.2.1"
+  },
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
+    "@types/node": "^12.0.10",
+    "@types/nodemailer": "^6.2.0"
+  },
+  "private": true
 }
