--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "8.1.0",
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/router": "8.1.0",
+    "@types/jszip": "^3.1.6",
     "core-js": "2.6.9",
     "docxtemplater": "3.13.2",
     "file-saver": "2.0.2",
@@ -42,7 +43,6 @@
     "@angular/language-service": "8.1.0",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
-    "@types/jszip": "3.1.6",
     "@types/materialize-css": "1.0.6",
     "@types/node": "12.0.12",
     "codelyzer": "5.1.0",
