--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "@angular/platform-browser": "8.2.0",
     "@angular/platform-browser-dynamic": "8.2.0",
     "@angular/router": "8.2.0",
-    "docxtemplater": "3.13.6",
+    "docxtemplater": "^3.14.0",
     "file-saver": "2.0.2",
     "firebase": "6.3.3",
     "font-awesome": "4.7.0",
-    "jszip": "2.6.1",
-    "jszip-utils": "0.1.0",
     "materialize-css": "1.0.0",
     "moment": "2.24.0",
     "moment-timezone": "0.5.26",
+    "pizzip": "^3.0.5",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
     "zone.js": "0.10.0"
