--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-saver": "2.0.2",
     "firebase": "6.3.3",
     "font-awesome": "4.7.0",
+    "jszip-utils": "^0.1.0",
     "materialize-css": "1.0.0",
     "moment": "2.24.0",
     "moment-timezone": "0.5.26",
