--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.11",
-    "@angular/common": "9.1.11",
-    "@angular/compiler": "9.1.11",
-    "@angular/core": "9.1.11",
+    "@angular/animations": "10.0.0",
+    "@angular/common": "10.0.0",
+    "@angular/compiler": "10.0.0",
+    "@angular/core": "10.0.0",
     "@angular/fire": "6.0.2",
-    "@angular/forms": "9.1.11",
-    "@angular/platform-browser": "9.1.11",
-    "@angular/platform-browser-dynamic": "9.1.11",
-    "@angular/router": "9.1.11",
+    "@angular/forms": "10.0.0",
+    "@angular/platform-browser": "10.0.0",
+    "@angular/platform-browser-dynamic": "10.0.0",
+    "@angular/router": "10.0.0",
     "docxtemplater": "3.17.9",
     "file-saver": "2.0.2",
     "firebase": "7.15.4",
@@ -31,33 +31,33 @@
     "moment-timezone": "0.5.31",
     "pizzip": "3.0.6",
     "rxjs": "6.5.5",
-    "tslib": "2.0.0",
+    "tslib": "^2.0.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.9",
-    "@angular/cli": "9.1.9",
-    "@angular/compiler-cli": "9.1.11",
-    "@angular/language-service": "9.1.11",
+    "@angular-devkit/build-angular": "0.1000.0",
+    "@angular/cli": "10.0.0",
+    "@angular/compiler-cli": "10.0.0",
+    "@angular/language-service": "10.0.0",
     "@types/jasmine": "3.5.11",
     "@types/jasminewd2": "2.0.8",
     "@types/jszip": "3.4.0",
     "@types/materialize-css": "1.0.8",
     "@types/node": "12.12.47",
     "codelyzer": "5.2.2",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "5.0.2",
-    "karma": "5.1.0",
-    "karma-chrome-launcher": "3.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "3.3.1",
-    "karma-jasmine-html-reporter": "1.5.4",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "2.0.5",
-    "protractor": "7.0.0",
+    "protractor": "~7.0.0",
     "ts-node": "8.10.2",
-    "tslint": "6.1.2",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.8.3"
+    "typescript": "3.9.5"
   }
 }
