chore(deps): update angular and angular cli packages

--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.2.3",
-    "@angular/common": "10.2.3",
-    "@angular/compiler": "10.2.3",
-    "@angular/core": "10.2.3",
+    "@angular/animations": "11.1.2",
+    "@angular/common": "11.1.2",
+    "@angular/compiler": "11.1.2",
+    "@angular/core": "11.1.2",
     "@angular/fire": "6.0.5",
-    "@angular/forms": "10.2.3",
-    "@angular/platform-browser": "10.2.3",
-    "@angular/platform-browser-dynamic": "10.2.3",
-    "@angular/router": "10.2.3",
+    "@angular/forms": "11.1.2",
+    "@angular/platform-browser": "11.1.2",
+    "@angular/platform-browser-dynamic": "11.1.2",
+    "@angular/router": "11.1.2",
     "docxtemplater": "3.19.9",
     "file-saver": "2.0.5",
     "firebase": "8.2.6",
@@ -31,28 +31,28 @@
     "moment-timezone": "0.5.33",
     "pizzip": "3.0.6",
     "rxjs": "6.6.3",
-    "tslib": "2.1.0",
+    "tslib": "^2.0.0",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1002.0",
-    "@angular/cli": "10.2.0",
-    "@angular/compiler-cli": "10.2.3",
-    "@angular/language-service": "10.2.3",
-    "@types/jasmine": "3.6.3",
+    "@angular-devkit/build-angular": "0.1101.4",
+    "@angular/cli": "11.1.4",
+    "@angular/compiler-cli": "11.1.2",
+    "@angular/language-service": "11.1.2",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.8",
     "@types/jszip": "3.4.0",
     "@types/materialize-css": "1.0.8",
     "@types/node": "12.19.16",
-    "codelyzer": "6.0.1",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "5.2.3",
-    "karma-chrome-launcher": "3.1.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "2.2.1",
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
