--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "11.2.5",
     "@angular/platform-browser-dynamic": "11.2.5",
     "@angular/router": "11.2.5",
+    "@tinkoff/ng-dompurify": "^3.0.0",
     "docxtemplater": "3.21.1",
+    "dompurify": "^2.2.7",
     "file-saver": "2.0.5",
     "firebase": "8.3.1",
     "font-awesome": "4.7.0",
@@ -39,6 +41,7 @@
     "@angular/cli": "11.2.4",
     "@angular/compiler-cli": "11.2.5",
     "@angular/language-service": "11.2.5",
+    "@types/dompurify": "^2.2.1",
     "@types/jasmine": "3.6.7",
     "@types/jasminewd2": "2.0.8",
     "@types/jszip": "3.4.0",
